Add scenarios resource
