# swagger.yaml
@@ -1,13 +1,13 @@
 openapi: 3.0.0
 info:
   description: This is a simulator for secure IoT middleware.
-  version: 1.0.0
+  version: 1.0.1
   title: IoT Secure Middleware Simulator
   contact:
     email: pascal.gremaud@unifr.ch
 servers:
   - description: Live server instance 
-    url: http://iot-simulator.decensor.yt
+    url: http://iot-simulator.polchky.io
   - description: Localhost server
     url: http://localhost:3000
 tags:
@@ -18,6 +18,7 @@ tags:
   - name: events
   - name: event types
   - name: rules
+  - name: scenarios
 paths:
   /clients/{clientId}/actions/:
     get:
@@ -629,6 +630,101 @@ paths:
           description: Invalid parameter
         '404': 
           description: Not found
+  /scenarios/:
+    get:
+      tags: 
+        - scenarios
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Scenario'
+    post: 
+      tags: 
+        - scenarios
+      responses:
+        '201':
+          description: created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Scenario'
+        '400':
+          description: Invalid input
+      requestBody:
+        $ref: '#/components/requestBodies/Scenario'
+    delete:
+      tags: 
+        - scenarios
+      responses: 
+        '204':
+          description: No content
+  /scenarios/{scenarioId}:
+    get:
+      tags: 
+        - scenarios
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Scenario'
+        '400':
+          description: Invalid parameter
+        '404': 
+          description: Not found
+      parameters:
+        - name: scenarioId
+          in: path
+          description: ID of scenario to return
+          required: true
+          schema:
+            type: integer
+    put:
+      tags: 
+        - scenarios
+      parameters:
+        - name: scenarioId
+          in: path
+          description: ID of scenario to update
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        $ref: '#/components/requestBodies/Scenario'
+      responses:
+        '200': 
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Scenario'
+        '400':
+          description: Invalid input
+        '404':
+          description: Not found
+    delete:
+      tags: 
+        - scenarios
+      parameters:
+        - name: scenarioId
+          in: path
+          description: ID of scenario to delete
+          required: true
+          schema:
+            type: integer
+      responses: 
+        '204':
+          description: No content
+        '400':
+          description: Invalid parameter
+        '404': 
+          description: Not found
 components:
   schemas:
     Action: 
@@ -723,7 +819,13 @@ components:
           type: boolean
         context:
           type: object
-
+    Scenario:
+      type: object
+      properties:
+        id:
+          type: integer
+        document:
+          type: object
   requestBodies:
     ActionTemplate:
       content:
@@ -814,4 +916,12 @@ components:
               isActive:
                 type: boolean
               context:
+                type: object
+    Scenario:
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              document:
                 type: object
